# sysmonitor

./: .gitignore  CMakeLists.txt  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  build.bat  build.ps1  build_windows.bat  build_windows.sh
.github/workflows/: build.yml
include/sysmonitor/: Version.h
scripts/: install.bat  install.sh
src/: main.cpp  main_simple.cpp
src/monitor/: ProcessInfo.cpp  ProcessInfo.h  SystemMonitor.cpp  SystemMonitor.h
src/optimizer/: Optimizer.cpp  Optimizer.h
src/platform/: LinuxPlatform.cpp  MacOSPlatform.cpp  Platform.h  WindowsPlatform.cpp
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
src/visualizer/: Visualizer.cpp  Visualizer.h
